0.2.4
Added variable names to auto complete.
Added function names to auto complete.
Added auto-complete popup key to keybindings dialog.
Started to add auto completion.
Changed key bindings file and format.
Fixed bug where size of doc viewer being stored wrong if it hasn't been shown.
Now remembers size and position of built in docviewer on quit.
Removed redundant function 'deleteSlice' from globals.
Truncated popup function menu entries when function/variable def is over 100 characters ( copy and paste of the entry uses full definition ).
Truncated function menu entries when function/variable def is over 100 characters.
Set widget names on menus to help find them from plugins.
Added french translation.
Tweaked prefs layout.
Added 'No Syntax Highlighting' to prefs to turn off syntax highlighting.

0.2.3
Cancel quit properly if 'Cancel' selected in unsaved documents dialog.
Status bar now shows number of replacements when using find/replace.
Fixed 'handles' showing on side/top/bottom on startup when not showing the user panes.
Added message dialog when disabling a plugin that can't be unloaded without a restart.
Added KKEdit version string to data passed to plugins.
Added main notebook widget to data passed to plugins.
Exposed main menu callbacks to plugins so they can be overridden.
Improved open include now tries exact match -> best match.
Open include file now only needs the cursor on the line with a #include no need to select the whole line, # **MUST** be the first character on the line.
Improved search for definition now try's: exact match in open files->exact match in all files in current folder->best match in all files in current folder.
Fixed bug in restore session when trying to restore file with a space in the name.
Fixed crash when trying to restore session with bookmarks with missing file.
Improved string scanning for valid chars.
Standardized save/load routines for configs.